packages/webassemblyjs/test/fixtures/type-errors/global-as-result/module.wast
(module 
  (global i32 (i32.const 17))
  (func (result f64)
    (get_global 0)
  )
)
